final commits. Added controllers

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=ExamPrepService
+
+gemini.api.key=${GEMINI_API_KEY}
+gemini.api.url=${GEMINI_API_URL}
+
+spring.data.mongodb.uri=${MONGODB_URI}
+spring.data.mongodb.database=ExamPrepUsers
+spring.data.mongodb.auto-index-creation=true
