Some issues fixed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
-spring.application.name=ExamPrepService
+spring.application.name=ExamPreparer
 
-gemini.api.key=${GEMINI_API_KEY}
 gemini.api.url=${GEMINI_API_URL}
 
-spring.data.mongodb.uri=${MONGODB_URI}
-spring.data.mongodb.database=ExamPrepUsers
+google.credentials.path=credentials.json
+google_app_script_url=${GOOGLE_SCRIPT_URL}
+GOOGLE_SCRIPT_FOR12PM=${GOOGLE_SCRIPT_URL}
+
+spring.mongodb.uri=mongodb://localhost:27017
+spring.mongodb.database=ExamPrepUsers
 spring.data.mongodb.auto-index-creation=true
