--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.batuhanozdemir</groupId>
-	<artifactId>exam-prep-service</artifactId>
+	<artifactId>ExamPreparer</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>ExamPrepService</name>
+	<name>ExamPreparerService</name>
 	<description>A Online Learning helper</description>
 	<url/>
 	<licenses>
@@ -27,7 +27,7 @@
 		<url/>
 	</scm>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>21</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -67,6 +67,11 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.15.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.auth</groupId>
+            <artifactId>google-auth-library-oauth2-http</artifactId>
+            <version>1.23.0</version>
         </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
